<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/addressCard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="10dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/grayLight"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/title_address"
                android:textColor="@color/pureBlack"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="260dp"
                android:clickable="true"
                android:text="@string/delete_address"
                android:textColor="@color/blue"
                android:textSize="15sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/lineColor"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/street"
                style="@style/RadTheme.AddressEdit"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/street_address"/>

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="260dp"
                android:clickable="true"
                android:text="@string/save_address"
                android:textColor="@color/blue"
                android:textSize="15sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/lineColor"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <EditText
                android:id="@+id/city"
                style="@style/RadTheme.AddressEdit"
                android:layout_width="212dp"
                android:layout_height="match_parent"
                android:hint="@string/city_address"
                android:inputType="textPostalAddress"/>

            <View
                android:id="@+id/line1"
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/city"
                android:background="@color/lineColor"/>

            <EditText
                android:id="@+id/state"
                style="@style/RadTheme.AddressEdit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/line1"
                android:hint="@string/state_address"
                android:inputType="textCapCharacters"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/lineColor"/>

        <TextView
            android:id="@+id/subtitle1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/subtitle_1_address"
            android:textColor="@color/pureBlack"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/rent"
            style="@style/RadTheme.AddressEdit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/rent_address"
            android:inputType="numberDecimal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/lineColor"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/subtitle_2_address"
                android:textColor="@color/pureBlack"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/landlord"
                style="@style/RadTheme.AddressEdit"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_below="@id/subtitle2"
                android:hint="@string/landlord_address"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/option1"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:text="@string/option_1_address"
                android:textColor="@color/blue"
                android:textSize="15sp"/>

            <RelativeLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@id/subtitle2"
                android:visibility="gone">

                <EditText
                    android:id="@+id/firstName"
                    style="@style/RadTheme.AddressEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/first_name_address"
                    android:inputType="textPersonName"/>

                <View
                    android:id="@+id/line2"
                    android:layout_width="0.1dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:background="@color/lineColor"/>

                <EditText
                    android:id="@+id/lastName"
                    style="@style/RadTheme.AddressEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/line2"
                    android:hint="@string/last_name_address"
                    android:inputType="textPersonName"/>

            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/lineColor"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dateHint"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:hint="@string/date_hint"
                android:paddingLeft="10dp"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="189dp"
                android:hint="@string/date_hint"
                android:paddingLeft="10dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/dateHint"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/to_address"
                android:textColor="@color/pureBlack"
                android:textSize="22sp"/>

            <EditText
                android:id="@+id/move_in"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/dateHint"
                android:layout_centerVertical="true"
                android:hint="@string/move_in_address"
                android:inputType="number|textPhonetic"
                android:paddingLeft="10dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/move_out"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/to"
                android:hint="@string/move_out_address"
                android:inputType="number|textPhonetic"
                android:paddingLeft="10dp"
                android:textSize="20sp"/>
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
