<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/addressManage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/addAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/radPadYellow"/>

        <TextView
            android:id="@+id/titleBarTitle"
            style="@style/RadTheme.TitleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:text="@string/title_bar_title"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/cancel"
            style="@style/RadTheme.TitleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:text="@string/cancel_button"
            android:textSize="19sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/add"
            style="@style/RadTheme.TitleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="292dp"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:text="@string/add_button"
            android:textSize="18sp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/save"
            style="@style/RadTheme.TitleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="292dp"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:text="@string/save_button"
            android:textSize="18sp"
            android:visibility="gone"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addAddress"
        android:padding="16dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/viewList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</RelativeLayout>
